# Ruscan

./: .gitignore  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: deploy_desktop.yaml  publish.yaml
network/: Cargo.toml
network/assets/: ieee-oui.csv
network/src/: lib.rs  utils.rs  vendor.rs
src/: App.css  App.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmd.rs  main.rs  network.rs  utils.rs  vendor.rs
src/components/: Progress.tsx  ScanField.tsx  ScanReport.tsx  SelectInterface.tsx  ThemeToggle.tsx
