[package]
name = "ruscan"
version = "0.0.0"
description = "Scan network with rust"
authors = ["thewh1teagle"]
license = "MIT"
repository = "https://github.com/thewh1teagle/ruscan"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
blinkscan = "0.1.2"
serde_json = "1.0"
serde = "1.0.203"
eyre = { git = "https://github.com/thewh1teagle/eyre", branch = "feat/report-serialize-backtrace", features = [
    "serialize",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
